# webagent-rs

./: .aider.conf.yml  .env.example  .gitignore  CLAUDE_PROPOSALS.md  CODE_REVIEW.md  CONVENTIONS.md  Cargo.toml  MERGE_AND_PARITY.md  MISSION.md  PARITY.md  PROGRESS.md  PROVIDER_STATUS.md  README.md  START_HERE.md  aider_build.ps1  build.rs  test_out.txt
.cargo/: config.toml
.github/workflows/: android.yml  ci.yml  release.yml
data/: memory.jsonl
data/runs/20260712_121502_238cfe34/: events.jsonl  meta.json  transcript.jsonl
data/runs/20260712_121502_7d592c84/: events.jsonl  meta.json  transcript.jsonl
data/runs/20260712_121502_b2203b14/: events.jsonl  meta.json  transcript.jsonl
data/runs/20260712_121502_dd3f08f0/: events.jsonl  meta.json  transcript.jsonl
data/runs/20260712_121502_ed1bd0f0/: events.jsonl  meta.json
data/runs/20260712_121803_2cddaf90/: events.jsonl  meta.json
data/runs/20260712_121803_bcd84cec/: events.jsonl  meta.json  transcript.jsonl
data/runs/20260712_122004_614ed18c/: events.jsonl  meta.json  transcript.jsonl
data/runs/20260712_122004_7c4dbf88/: events.jsonl  meta.json
docs/: AUTORESEARCH_PLAN.md  BRAINS_AS_WORKERS.md  BRAIN_ANALYZE_ADD.md  GENIUS_COUNCIL_CONCEPT.md  PROTOCOL_SCHEMA.md  SELF_RESEARCH_PLAN.md  TUI_DESIGN.md  WIKI_MEMORY_PLAN.md
docs/research/: browser_pool_files.md
examples/: gemini_dom.rs  inspect.rs  relay.rs
scripts/: build-release.ps1  copy-webview2-loader.ps1  start-workers.ps1
selectors/: chatgpt.json  claude.json  deepseek.json  gemini.json  kimi.json  mistral.json  qwen.json  zai.json
src/: autoresearch.rs  bot2bot_worker.rs  brain.rs  brain_score.rs  brains_health.rs  browser.rs  browser_pool.rs  canary.rs  cdp.rs  circuit_breaker.rs  comms.rs  config.rs  controller.rs  doctor.rs  executor.rs  file_actions.rs  lib.rs  login.rs  loop_guard.rs  main.rs  memory.rs  mock_page.rs  observer.rs  oobe.rs  page_driver.rs  prompts.rs  protocol.rs  relay.rs  repl.rs  run_store.rs  self_research.rs  shell_policy.rs  timeouts.rs  transcript.rs  tui.rs  tui_render.rs  tui_state.rs  watchdog.rs  webview_runtime.rs  wiki_memory.rs  (+1 more)
