[package]
name = "webagent"
version = "0.8.1"
edition = "2021"
description = "WebAgent — lokaler, browserbasierter Agent (Rust-Port). Web-Chats als Gehirn, lokale Shell als Werkzeug."
license = "MIT"

# Bewusst rein-Rust-Dependencies (keine windows-*/chrono/C-Toolchain nötig),
# damit der Kern plattformunabhängig ohne MSVC/MinGW baut. Zeitstempel und
# PID-Liveness liefert das Crate selbst (siehe lib.rs / run_store).
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
# Rein-Rust-Regex MIT Lookaround-Support (die regex-Crate kann kein Lookahead/-behind).
fancy-regex = "0.14"
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
lazy_static = "1.5"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "std"] }
# Embedded WebView (wry/tao) — optional, damit der Kern ohne GUI-Deps in CI baut.
wry = { version = "0.47", optional = true }
tao = { version = "0.29", optional = true }

[features]
default = ["webview"]
webview = ["dep:wry", "dep:tao"]

[lib]
name = "webagent"
path = "src/lib.rs"

[[bin]]
name = "webagent"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
